Update 'i32v6e066-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:b3081b49171abeb68d7f1fc4bbbc6d75dff2a233@sha256:6edc825b872929348c160d28451737100de55b950ec4957346d024797f246b8a

--- a/components/i32v6e066-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/i32v6e066-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: i32v6e066-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:b3081b49171abeb68d7f1fc4bbbc6d75dff2a233@sha256:6edc825b872929348c160d28451737100de55b950ec4957346d024797f246b8a
+          name: container-image
